@@ -1,3 +1,12 @@
+Sun Jan 30 19:57:37 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>
+
+	* orbsvcs/orbsvcs/IFRService/ModuleDef_i.cpp:
+	* orbsvcs/orbsvcs/IFRService/RecursDef_i.cpp:
+	* orbsvcs/orbsvcs/IFRService/RecursDef_i.h:
+
+	  Added missing header include directives that are necessary due
+	  to inter-header dependency reductions in ACE.
+
 Sun Jan 30 12:51:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * orbsvcs/Fault_Detector/FT_FaultDetectorFactory_i.h:
